Fix compile with OSS4.

BUG: 292595